change logo and colours

--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -21,23 +21,34 @@
 
 ENSEMBL_BLAST_DATA_PATH = /nfs/ensembl/ensembl-genomes/BLASTDATA/metazoa
 TAXON_ORDER = [Eukaryota Metazoa Lepidoptera ]
-DATA_SOURCE = VectorBase (www.vectorbase.org)
+DATA_SOURCE = Tardigrades.org
 GENOMIC_UNIT = metazoa
-COMPARA_DB_NAME = Lepidopteran Compara
+COMPARA_DB_NAME = Tardigrade Compara
+PAN_COMPARA_DB_NAME = Metazoan Compara
+ANALYTICS_CODE = UA-77495101-5
+BLAST_URL = http://blast.tardigrades.org
+HELP_URL = http://tardigrades.org/category/help/
+DOWNLOAD_URL = http://download.tardigrades.org
+PROJECT_URL = http://tardigrades.org
+PROJECT_URL_TITLE = tardigrades.org
+ASSEMBLY_STATS_URL = http://content.tardigrades.org/pages/assemblies/assembly-stats.html
+CODON_USAGE_URL = http://content.tardigrades.org/pages/annotations/codon-usage.html
+REFERENCE_ASSEMBLY = ramazzottius_varieornatus_v1
 SPECIES_RELEASE_VERSION = 1
 ENSEMBL_GENOME_SIZE     = 0.5
 #ENSEMBL_CHROMOSOMES     = [ ]
 
-DEFAULT_FAVOURITES = [  ]
-ANNOTATED_ASSEMBLIES = [ ]
 ASSEMBLY_ONLY = [ ]
-ENSEMBL_SITENAME = Tardigrades.org - Tardigrade genome browser
-ENSEMBL_SITENAME_SHORT = Tardigrades.org
-ENSEMBL_FTP_URL = ftp://ftp.ensemblgenomes.org/pub/metazoa
+ENSEMBL_SITE_NAME = Tardigrade genome browser
+ENSEMBL_SITE_NAME_SHORT = Tardigrades.org
+SITE_RELEASE_VERSION = v1
+SITE_RELEASE_DATE = November 2016
 
+SEARCH_DB_NAME = tardigrade_search_32_85_1
+SEARCH_DB_HOST = localhost
+SEARCH_DB_PORT = 3306
+SEARCH_DB_USER = anonymous
 
-ENSEMBL_SITE_NAME             = Tardigrades.org
-ENSEMBL_SITE_NAME_SHORT       = Tardigrades.org
 ENSEMBL_CHROMOSOMES = []
 DISPLAY_ONTOLOGIES = [ GO ]
 ONTOLOGY_SUBSETS = [ goslim_generic ]
@@ -71,8 +82,8 @@ ENSEMBL_BLAST_FILTER   = /dummy/path
 ENSEMBL_BLAST_MATRIX   = /dummy/path
 
 # Default database is the EBI public
-DATABASE_HOST       = flowers.bio.ed.ac.uk
-DATABASE_HOST_PORT  = 3307
+DATABASE_HOST       = localhost
+DATABASE_HOST_PORT  = 3306
 DATABASE_DBUSER     = ensro
 DATABASE_DBPASS     =
 
@@ -103,7 +114,7 @@ PAGE_TEXT        = 424141 ; 555555
 PAGE_HEADER      = 424141 ; 333333
 PAGE_LINK        = 143BD8 ; 3366bb
 PAGE_VISITED     = 143BD8 ; 000066
-PAGE_HOVER       = FE7001 ; cc0000
+PAGE_HOVER       = 85B295 ; cc0000
 
 # Masthead
 MH_BG            = 333333 ; 3A7295 ; 333366 - set in metazoa ini file
@@ -111,23 +122,22 @@ MH_BORDER        = 333333 ; 336699
 MH_TEXT          = ffffff ; ccddff
 MH_LINK          = ffffff
 MH_VISITED       = ffffff
-MH_HOVER         = FE7001 ; cc0000 - set in metazoa ini file
+MH_HOVER         = 85B295 ; cc0000 - set in metazoa ini file
 MH_TAB           = 555555
 TAB_TEXT         = ffffff
 MH_TAB_ACTIVE    = ffffff
 
-SITE_LOGO        = lepbase.png
-SITE_ICON        = ensembl-favicon.png
-SITE_LOGO_ALT    = Lepbase Home
+SITE_LOGO        = tardigrades_org.png
+SITE_LOGO_ALT    = Tardigrades.org Home
 SITE_LOGO_WIDTH  = 150
 SITE_LOGO_HEIGHT = 50
 SITE_LOGO_HREF   = /
 SITE_LOGO_COLOUR = 5588dd
-PRINT_LOGO       = e-ensembl_print.gif
+PRINT_LOGO       = lepbase.png
 MIRROR_ICON      = globe_sm.gif
-MOBILE_LOGO         = e-mobile.png
-MOBILE_LOGO_WIDTH   = 50
-MOBILE_LOGO_HEIGHT  = 45
+MOBILE_LOGO         = e.png
+MOBILE_LOGO_WIDTH   = 43
+MOBILE_LOGO_HEIGHT  = 40
 
 # Extras
 TINT_BG          = dddddd ; used as 'tint' colour on spreadsheets [1] - set in metazoa ini file
