--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -44,7 +44,7 @@ ENSEMBL_SITE_NAME_SHORT = Tardigrades.org
 SITE_RELEASE_VERSION = v1
 SITE_RELEASE_DATE = November 2016
 
-SEARCH_DB_NAME = tardigrade_search_32_85_1
+SEARCH_DB_NAME = ngenomes_search_32_85_1
 SEARCH_DB_HOST = localhost
 SEARCH_DB_PORT = 3306
 SEARCH_DB_USER = anonymous
