Update suggested searches

--- a/conf/ini-files/Ramazzottius_varieornatus_v101.ini
+++ b/conf/ini-files/Ramazzottius_varieornatus_v101.ini
@@ -5,8 +5,8 @@
 [ENSEMBL_COLOURS]
 
 [SAMPLE_DATA]
-LOCATION_PARAM    = Scaffold001:1-200000
-LOCATION_TEXT     = Scaffold001:1-200000
+LOCATION_PARAM    = Scaffold001
+LOCATION_TEXT     = Scaffold001
 
 GENE_PARAM        = RVARI.g1
 GENE_TEXT         = RVARI.g1
