Fix search terms for HDUJA versions

--- a/conf/ini-files/Hypsibius_dujardini_nhd231.ini
+++ b/conf/ini-files/Hypsibius_dujardini_nhd231.ini
@@ -5,6 +5,16 @@
 [ENSEMBL_COLOURS]
 
 [SAMPLE_DATA]
+LOCATION_PARAM    = nHd.2.3.scaf00001
+LOCATION_TEXT     = nHd.2.3.scaf00001
+
+GENE_PARAM        = nHd.2.3.1.g00001
+GENE_TEXT         = nHd.2.3.1.g00001
+
+TRANSCRIPT_PARAM  = bHd00004.1
+TRANSCRIPT_TEXT   = bHd00004.1
+
+SEARCH_TEXT       = D-mannose
 
 [databases]
 DATABASE_CORE = hypsibius_dujardini_nhd231_core_32_85_1
