--- a/conf/ini-files/Hypsibius_dujardini_nhd301.ini
+++ b/conf/ini-files/Hypsibius_dujardini_nhd301.ini
@@ -8,8 +8,8 @@
 LOCATION_PARAM    = scaffold0001
 LOCATION_TEXT     = scaffold0001:1-200000
 
-GENE_PARAM        = bHd00001
-GENE_TEXT         = bHd00001
+GENE_PARAM        = HDUJA.g1
+GENE_TEXT         = HDUJA.g1
 
 TRANSCRIPT_PARAM  = bHd00004.1
 TRANSCRIPT_TEXT   = bHd00004.1
