--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -31,8 +31,8 @@ HELP_URL = http://tardigrades.org/category/help/
 DOWNLOAD_URL = http://download.tardigrades.org
 PROJECT_URL = http://tardigrades.org
 PROJECT_URL_TITLE = tardigrades.org
-ASSEMBLY_STATS_URL = http://content.tardigrades.org/pages/assemblies/assembly-stats.html
-CODON_USAGE_URL = http://content.tardigrades.org/pages/annotations/codon-usage.html
+ASSEMBLY_STATS_URL = http://content.lepbase.org/html/assembly-stats/assembly-stats.html?path=/v1/json/assemblies/&
+CODON_USAGE_URL = http://content.lepbase.org/html/codon-usage/codon-usage.html?path=/v1/json/annotations/&
 REFERENCE_ASSEMBLY = ramazzottius_varieornatus_v1
 SPECIES_RELEASE_VERSION = 1
 ENSEMBL_GENOME_SIZE     = 0.5
@@ -44,7 +44,7 @@ ENSEMBL_SITE_NAME_SHORT = Tardigrades.org
 SITE_RELEASE_VERSION = v1
 SITE_RELEASE_DATE = November 2016
 
-SEARCH_DB_NAME = ngenomes_search_32_85
+SEARCH_DB_NAME = tardigrades_search_32_85
 SEARCH_DB_HOST = localhost
 SEARCH_DB_PORT = 3306
 SEARCH_DB_USER = anonymous
