--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -31,9 +31,9 @@ HELP_URL = http://tardigrades.org/category/help/
 DOWNLOAD_URL = http://download.tardigrades.org
 PROJECT_URL = http://tardigrades.org
 PROJECT_URL_TITLE = tardigrades.org
-ASSEMBLY_STATS_URL = http://content.lepbase.org/html/assembly-stats/assembly-stats.html?path=/v1/json/assemblies/&
-CODON_USAGE_URL = http://content.lepbase.org/html/codon-usage/codon-usage.html?path=/v1/json/annotations/&
-REFERENCE_ASSEMBLY = ramazzottius_varieornatus_v1
+ASSEMBLY_STATS_URL = http://test.content.lepbase.org/html/assembly-stats/assembly-stats.html?path=/v1/json/assemblies/&
+CODON_USAGE_URL = http://test.content.lepbase.org/html/codon-usage/codon-usage.html?path=/v1/json/annotations/&
+REFERENCE_ASSEMBLY = hypsibius_dujardini_nhd315
 SPECIES_RELEASE_VERSION = 1
 ENSEMBL_GENOME_SIZE     = 0.5
 #ENSEMBL_CHROMOSOMES     = [ ]
