--- a/conf/ini-files/Hypsibius_dujardini_nhd315.ini
+++ b/conf/ini-files/Hypsibius_dujardini_nhd315.ini
@@ -1,3 +1,15 @@
+[SAMPLE_DATA]
+LOCATION_PARAM    = scaffold0001
+LOCATION_TEXT     = scaffold0001:1-200000
+
+GENE_PARAM        = BV898_00001
+GENE_TEXT         = BV898_00001
+
+TRANSCRIPT_PARAM  = BV898_00001.t01
+TRANSCRIPT_TEXT   = BV898_00001.t01
+
+SEARCH_TEXT       = D-mannose
+
 [ENSEMBL_INTERNAL_TRACKHUB_SOURCES]
 RNASEQ = genomehubs_rnaseq
 
