--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -82,7 +82,7 @@ ENSEMBL_BLAST_FILTER   = /dummy/path
 ENSEMBL_BLAST_MATRIX   = /dummy/path
 
 # Default database is the EBI public
-DATABASE_HOST       = localhost
+DATABASE_HOST       = genomehubs-mysql
 DATABASE_HOST_PORT  = 3306
 DATABASE_DBUSER     = ensro
 DATABASE_DBPASS     =
