--- a/conf/ini-files/DEFAULTS.ini
+++ b/conf/ini-files/DEFAULTS.ini
@@ -45,7 +45,7 @@ SITE_RELEASE_VERSION = v1
 SITE_RELEASE_DATE = November 2016
 
 SEARCH_DB_NAME = tardigrades_search_32_85
-SEARCH_DB_HOST = localhost
+SEARCH_DB_HOST = genomehubs-mysql
 SEARCH_DB_PORT = 3306
 SEARCH_DB_USER = anonymous
 
